--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 	<script src="js/app.js"></script>
 
 </head>
-<body data-ng-app="emailDbApp" data-ng-controller="ContactController">
+<body data-ng-app="emailDbApp">
 
 	<div class="container">
 		<nav class="navbar navbar-inverse">
